--- a/01-html-css/portfolio-homepage/index.html
+++ b/01-html-css/portfolio-homepage/index.html
@@ -6,6 +6,8 @@
         <title>Portfolio HomePage</title>
     </head>
     <body>
-        <!--Body will be added after some time-->
+        <h1>Hi, I'm Mayuresh</h1>
+        <h2>Frontend Developer</h2>
+        <h3>Learning HTML, CSS</h3>
     </body>
 </html>
