--- a/01-html-css/portfolio-homepage/index.html
+++ b/01-html-css/portfolio-homepage/index.html
@@ -9,5 +9,12 @@
         <h1>Hi, I'm Mayuresh</h1>
         <h2>Frontend Developer</h2>
         <h3>Learning HTML, CSS</h3>
+        
+        <p>I'm currently on a 90-day journey to master frontend development.
+            This is my first basic portfolio homepage - built with only HTML.
+            I'm excited to build real websites and become a pro developer!
+        </p>
+
+        <p> In this project, I'm learning HTML structure, tags, headings, paragraphs, and more - step by step.</p>
     </body>
 </html>
