added unordered list

--- a/01-html-css/portfolio-homepage/index.html
+++ b/01-html-css/portfolio-homepage/index.html
@@ -16,5 +16,15 @@
         </p>
 
         <p> In this project, I'm learning HTML structure, tags, headings, paragraphs, and more - step by step.</p>
+
+        <h2>My Hobbies</h2>
+
+        <ul>
+            <li>Trekking in the Sahyadris</li>
+            <li>Coding frontend projects</li>
+            <li>Exploring the world of horses</li>
+            <li>Listening of music</li>
+        </ul>
+        
     </body>
 </html>
