added ordered list

--- a/01-html-css/portfolio-homepage/index.html
+++ b/01-html-css/portfolio-homepage/index.html
@@ -25,6 +25,15 @@
             <li>Exploring the world of horses</li>
             <li>Listening of music</li>
         </ul>
-        
+
+        <h2>My Daily Learning Routine</h2>
+
+        <ol>
+            <li>Wake up and review yesterday's code</li>
+            <li>Watch 1-2 tutorial videos</li>
+            <li>Practice by building a project</li>
+            <li>Push progress to Github</li>
+            <li>Update my learning tracker</li>
+        </ol>
     </body>
 </html>
