added changes to the file

--- a/01-html-css/portfolio-homepage/index.html
+++ b/01-html-css/portfolio-homepage/index.html
@@ -33,7 +33,8 @@
             <li>Watch 1-2 tutorial videos</li>
             <li>Practice by building a project</li>
             <li>Push progress to Github</li>
-            <li>Update my learning tracker</li>            
+            <li>Update my learning tracker</li>
+            <li>Committing to the github repo</li>            
         </ol>
     </body>
 </html>
