--- a/01-html-css/portfolio-homepage/index.html
+++ b/01-html-css/portfolio-homepage/index.html
@@ -10,6 +10,12 @@
         <h2>Frontend Developer</h2>
         <h3>Learning HTML, CSS</h3>
         
+        <img 
+        src="assets/profile-pic.jpg" 
+        alt="Mayuresh Patil's Profile Photo" 
+        style="width: 200px; height:auto; display: block; margin: 0 auto;"
+        >
+
         <p>I'm currently on a 90-day journey to master frontend development.
             This is my first basic portfolio homepage - built with only HTML.
             I'm excited to build real websites and become a pro developer!
@@ -34,7 +40,7 @@
             <li>Practice by building a project</li>
             <li>Push progress to Github</li>
             <li>Update my learning tracker</li>
-            <li>Committing to the github repo</li>            
+            <li>Committing to the github repo</li>     
         </ol>
     </body>
 </html>
