--- a/01-html-css/portfolio-homepage/index.html
+++ b/01-html-css/portfolio-homepage/index.html
@@ -16,6 +16,15 @@
         style="width: 200px; height:auto; display: block; margin: 0 auto;"
         >
 
+        <section>
+            <h2>About Me</h2>
+            <p>
+                Hello! I'm <strong>Mayuresh Patil</strong>, a passionate aspiring frontend developer. <br><br>
+                I love building clean, user-friendly websites and continously learning modern web technologies. <br>
+                <em>Code is poetry.</em>
+            </p>
+        </section>
+
         <p>I'm currently on a 90-day journey to master frontend development.
             This is my first basic portfolio homepage - built with only HTML.
             I'm excited to build real websites and become a pro developer!
