added padding to the about section

--- a/01-html-css/portfolio-homepage/index.html
+++ b/01-html-css/portfolio-homepage/index.html
@@ -16,7 +16,7 @@
         style="width: 200px; height:auto; display: block; margin: 0 auto;"
         >
 
-        <section>
+        <section style="padding: 20px;">
             <h2>About Me</h2>
             <p>
                 Hello! I'm <strong>Mayuresh Patil</strong>, a passionate aspiring frontend developer. <br><br>
