added contact section in portfolio

--- a/01-html-css/portfolio-homepage/index.html
+++ b/01-html-css/portfolio-homepage/index.html
@@ -25,6 +25,13 @@
             </p>
         </section>
 
+        <section style="padding: 20px;">
+            <h2>Contact</h2>
+            <p>Email: <a href="mailto:themayureshpatil@gmail.com"></a></p>
+            <p>Phone: <a href="tel:+917202952712">+91 7202952712</a></p>
+            <p>Location: Vadodara, Gujarat, India</p>
+        </section>
+
         <p>I'm currently on a 90-day journey to master frontend development.
             This is my first basic portfolio homepage - built with only HTML.
             I'm excited to build real websites and become a pro developer!
