--- a/01-html-css/portfolio-homepage/index.html
+++ b/01-html-css/portfolio-homepage/index.html
@@ -10,6 +10,14 @@
         <h2>Frontend Developer</h2>
         <h3>Learning HTML, CSS</h3>
         
+        <nav>
+            <ul style="list-style: none; display: flex; gap: 20px; padding: 0;">
+                <li><a href="#home">Home</a></li>
+                <li><a href="#about">About</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+
         <img 
         src="assets/profile-pic.jpg" 
         alt="Mayuresh Patil's Profile Photo" 
