--- a/01-html-css/portfolio-homepage/index.html
+++ b/01-html-css/portfolio-homepage/index.html
@@ -3,9 +3,24 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Portfolio HomePage</title>
+
+        <!-- SEO Tags -->
+        <meta name="dexcription" content="Portfolio of Mayuresh Patil - Frontend Developer">
+        <meta name="keywords" content="Frontend, HTML, CSS, JavaScript, React, Portfolio">
+        <meta name="author" content="Mayuresh Patil">
+
+        <title>Mayuresh Patil | Frontend Developer</title>
+
+        <link rel="icon" type="image/png" href="assets/favicon.ico">
+
+        <style>
+            html {
+                scroll-behavior: smooth;
+            }
+        </style>
     </head>
     <body>
+        <section id="home">
         <h1>Hi, I'm Mayuresh</h1>
         <h2>Frontend Developer</h2>
         <h3>Learning HTML, CSS</h3>
@@ -23,8 +38,9 @@
         alt="Mayuresh Patil's Profile Photo" 
         style="width: 200px; height:auto; display: block; margin: 0 auto;"
         >
+        </section>
 
-        <section style="padding: 20px;">
+        <section id="about" style="padding: 20px;">
             <h2>About Me</h2>
             <p>
                 Hello! I'm <strong>Mayuresh Patil</strong>, a passionate aspiring frontend developer. <br><br>
@@ -33,7 +49,7 @@
             </p>
         </section>
 
-        <section style="padding: 20px;">
+        <section id="contact" style="padding: 20px;">
             <h2>Contact</h2>
             <p>Email: <a href="mailto:themayureshpatil@gmail.com"></a></p>
             <p>Phone: <a href="tel:+917202952712">+91 7202952712</a></p>
