added footer to the portfolio

--- a/01-html-css/portfolio-homepage/index.html
+++ b/01-html-css/portfolio-homepage/index.html
@@ -82,5 +82,9 @@
             <li>Update my learning tracker</li>
             <li>Committing to the github repo</li>     
         </ol>
+
+        <footer style="text-align: center; padding: 20px; background-color: #f0f0f0;">
+            <p>&copy; 2025 Mayuresh Patil. All rights reserved.</p>
+        </footer>
     </body>
 </html>
