--- a/01-html-css/portfolio-homepage/index.html
+++ b/01-html-css/portfolio-homepage/index.html
@@ -13,6 +13,8 @@
 
         <link rel="icon" type="image/png" href="assets/favicon.ico">
 
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
+
         <link rel="stylesheet" href="css/style.css">
         <style>
             
