--- a/01-html-css/portfolio-homepage/index.html
+++ b/01-html-css/portfolio-homepage/index.html
@@ -5,7 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <!-- SEO Tags -->
-        <meta name="dexcription" content="Portfolio of Mayuresh Patil - Frontend Developer">
+        <meta name="description" content="Portfolio of Mayuresh Patil - Frontend Developer">
         <meta name="keywords" content="Frontend, HTML, CSS, JavaScript, React, Portfolio">
         <meta name="author" content="Mayuresh Patil">
 
