Completed Project: Portfolio Homepage with Responsive Design

--- a/01-html-css/portfolio-homepage/index.html
+++ b/01-html-css/portfolio-homepage/index.html
@@ -21,6 +21,7 @@
         </style>
     </head>
     <body>
+        <!-- Navigation Bar -->
          <nav>
             <ul class="navbar">
                 <li><a href="#home">Home</a></li>
@@ -29,10 +30,12 @@
             </ul>
         </nav>
 
+        <!-- Home section -->
         <section id="home">
             <h1>Hi, I'm Mayuresh</h1>
             <h2>Frontend Developer</h2>
             <h3>Learning HTML, CSS</h3>
+            <!-- Hero section -->
             <img 
             src="assets/profile-pic.jpg" 
             alt="Mayuresh Patil's Profile Photo" 
@@ -40,6 +43,7 @@
             >
         </section>
 
+        <!-- About Section -->
         <section id="about" class="page-section">
             <h2>About Me</h2>
             <p>
@@ -49,6 +53,7 @@
             </p>
         </section>
 
+        <!-- Contact Section -->
         <section id="contact" class="contact-section">
             <h2>Contact</h2>
             <p>Email: <a href="mailto:themayureshpatil@gmail.com">themayureshpatil@gmail.com</a></p>
@@ -83,6 +88,7 @@
             <li>Committing to the github repo</li>     
         </ol>
 
+        <!-- Footer -->
         <footer class="site-footer">
             <p>&copy; 2025 Mayuresh Patil. All rights reserved.</p>
         </footer>
